tests/compiler/good/t36.zls
(* HSCC Example 3 *)
let hybrid main () =
  let
  rec der x = 0.0 init 0.0
              reset
                (up(y)) -> last x +. 1.0
              | (up(z)) -> last x +. 2.0
  and der y = 0.0 init -. 1.0
              reset (up(z)) -> 1.0
  and der z = 1.0 init -. 1.0
  in
  ()

